--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "QUEEN-NELUMI-MD",
-  "version": "2.0.0",
+  "name": "whatsapp-otp-bot",
+  "version": "1.0.0",
   "description": "A WhatsApp bot created using Node.js",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name QUEEN-NELUMI-MD",
-    "stop": "pm2 stop QUEEN-NELUMI-MD",
-    "restart": "pm2 restart QUEEN-NELUMI-MD"
+    "stop": "pm2 stop wa-otp",
+    "restart": "pm2 restart wa-otp"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:baileys-mod",
+    "@whiskeysockets/baileys": "npm:baileys@6.7.20",
     "@adiwajshing/keyed-db": "^0.2.4",
     "pino": "^9.6.0",
     "pm2": "^5.4.3",
