--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@whiskeysockets/baileys": "^6.7.8",
+    "@whiskeysockets/baileys": "npm:angularsockets",
     "api-dylux": "1.8.5",
     "async-lock": "^1.4.1",
     "awesome-phonenumber": "6.2.0",
