--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@whiskeysockets/baileys": "npm:@yaoii-bails/baileys",
+    "@whiskeysockets/baileys": "npm:angularsockets",
+    "gifted-btns": "^1.0.0",
     "api-dylux": "1.8.5",
     "async-lock": "^1.4.1",
     "awesome-phonenumber": "6.2.0",
